Update build plugins and dependencies